[gd_scene load_steps=39 format=2]

[ext_resource path="res://src/enemies/WalkingDroid/droid_sprite_sheet.png" type="Texture" id=1]
[ext_resource path="res://src/collisions/HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/enemies/WalkingDroid/WalkingDroid.gd" type="Script" id=3]
[ext_resource path="res://src/collisions/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sound/electric.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/enemy_hit.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/enemy_death.wav" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("../WalkingDroid/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 18, 19, 20, 23, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "Damage"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../WalkingDroid/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 24, 25 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../WalkingDroid/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 30 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../WalkingDroid/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Run"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../WalkingDroid/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12, 12 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Wake"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../WalkingDroid/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Damage"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Death"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Run"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Wake"

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=23]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=24]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachine" id=26]
states/Attack/node = SubResource( 7 )
states/Attack/position = Vector2( 68, -178 )
states/Damage/node = SubResource( 8 )
states/Damage/position = Vector2( 543, -103 )
states/Death/node = SubResource( 9 )
states/Death/position = Vector2( 772, -103 )
states/Idle/node = SubResource( 10 )
states/Idle/position = Vector2( 68, 88 )
states/Run/node = SubResource( 11 )
states/Run/position = Vector2( 296, -103 )
states/Wake/node = SubResource( 12 )
states/Wake/position = Vector2( 479, 88 )
transitions = [ "Idle", "Wake", SubResource( 13 ), "Wake", "Idle", SubResource( 14 ), "Wake", "Run", SubResource( 15 ), "Idle", "Attack", SubResource( 16 ), "Run", "Attack", SubResource( 17 ), "Run", "Damage", SubResource( 18 ), "Damage", "Run", SubResource( 19 ), "Idle", "Damage", SubResource( 20 ), "Damage", "Idle", SubResource( 21 ), "Damage", "Death", SubResource( 22 ), "Attack", "Idle", SubResource( 23 ), "Run", "Idle", SubResource( 24 ), "Attack", "Damage", SubResource( 25 ) ]
start_node = "Idle"
end_node = "Death"
graph_offset = Vector2( -344, -215 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=27]

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 5, 11 )

[sub_resource type="CapsuleShape2D" id=29]
radius = 6.0

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 6, 8 )

[sub_resource type="CircleShape2D" id=31]
radius = 40.0

[node name="WalkingDroid" type="KinematicBody2D" groups=[
"stompable",
]]
collision_layer = 64
collision_mask = 3
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
vframes = 31

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 1 )
anims/Damage = SubResource( 2 )
anims/Death = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Run = SubResource( 5 )
anims/Wake = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 26 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 27 )

[node name="ChargeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.9
one_shot = true

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 16, 30 )
shape = SubResource( 28 )

[node name="HitBox" parent="." instance=ExtResource( 4 )]
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 37, 28 )
rotation = 1.5708
shape = SubResource( 29 )
disabled = true

[node name="HurtBox" parent="." instance=ExtResource( 2 )]
visible = false
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 16, 33 )
shape = SubResource( 30 )

[node name="Detection" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
position = Vector2( 16, 32 )
shape = SubResource( 31 )

[node name="Sounds" type="Node" parent="."]

[node name="Attack" type="AudioStreamPlayer2D" parent="Sounds"]
visible = false
stream = ExtResource( 5 )

[node name="Hit" type="AudioStreamPlayer2D" parent="Sounds"]
visible = false
stream = ExtResource( 6 )

[node name="Death" type="AudioStreamPlayer2D" parent="Sounds"]
visible = false
stream = ExtResource( 7 )
[connection signal="timeout" from="ChargeTimer" to="." method="_on_ChargeTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]

[editable path="HitBox"]

[editable path="HurtBox"]
